# surge

./: .ai-factory.json  .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GATE_PERSISTENCE_TESTING.md  GATE_TIMEOUT_TESTING.md  INTEGRATION_TEST_VERIFICATION.md  LICENSE-APACHE  LICENSE-MIT  MANUAL_UI_GATE_TESTING.md  PIPELINE_VERIFICATION.md  README.md  THIRD_PARTY.md  agent-metadata.json  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  surge.example.toml  surge.toml
crates/surge-acp/: Cargo.toml  builtin_registry.json
crates/surge-acp/src/: acp_registry.json  agent_info.rs  agent_metadata.json  client.rs  connection.rs  discovery.rs  display.rs  health.rs  lib.rs  metadata.rs  pool.rs  process_tracker.rs  registry.rs  router.rs  secrets.rs  terminal.rs  transport.rs
crates/surge-acp/tests/: bridge_close_timeout.rs  bridge_concurrent_sessions.rs  bridge_crash_detection.rs  bridge_dynamic_outcome_enum.rs  bridge_handshake_failure.rs  bridge_reply_to_tool.rs  bridge_request_human_input.rs  bridge_sandbox_filtering.rs  bridge_sandbox_m4_stub.rs  bridge_session_lifecycle.rs  bridge_shutdown_with_open.rs  bridge_streaming.rs  bridge_token_tracking.rs  bridge_tool_injection.rs  bridge_worker_panic.rs  facade_contract.rs  health_integration_test.rs  platform_encoding_test.rs  platform_process_test.rs  reconnect_integration_test.rs
crates/surge-cli/: Cargo.toml  build.rs
crates/surge-cli/src/: legacy_spec.rs  main.rs
crates/surge-cli/tests/: agent_discovery_test.rs  analytics_integration_test.rs  cli_artifact_schema.rs  cli_bootstrap_help.rs  cli_config_test.rs  cli_feature_help.rs  cli_fork.rs  cli_init_test.rs  cli_m6_engine_run_watch.rs  cli_project_describe_test.rs  cli_replay.rs  dynamic_registry_test.rs  examples_smoke.rs  fault_injection.rs  migrate_spec_e2e.rs  version.rs
crates/surge-core/: Cargo.toml
crates/surge-core/benches/: bincode_roundtrip.rs  fold_events.rs  toml_roundtrip.rs  validate_graphs.rs
crates/surge-core/src/: agent_config.rs  approvals.rs  archetype.rs  artifact_contract.rs  branch_config.rs  budget.rs  bundled_flows.rs  config.rs  content_hash.rs  doctor.rs  edge.rs  error.rs  event.rs  graph.rs  hooks.rs  human_gate_config.rs  id.rs  keys.rs  lib.rs  loop_config.rs  mcp_config.rs  node.rs  notify_config.rs  predicate.rs  profile.rs  roadmap.rs  roadmap_patch.rs  run_event.rs  run_state.rs  run_status.rs  runtime.rs  sandbox.rs  sandbox_matrix.rs  spec.rs  state.rs  subgraph_config.rs  terminal_config.rs  validation.rs
crates/surge-core/tests/: artifact_schema_snapshots.rs  fold_determinism_proptest.proptest-regressions  fold_determinism_proptest.rs  fold_hook_events.rs  graph_proptest.rs  migrations_v1_roundtrip.rs  profile_registry_proptest.rs  smoke_legacy_unchanged.rs  snapshots.rs
crates/surge-daemon/: Cargo.toml  README.md
crates/surge-daemon/src/: admission.rs  automation_merge_gate.rs  broadcast.rs  error.rs  intake_completion.rs  lib.rs  lifecycle.rs  main.rs  pidfile.rs  recovery.rs  server.rs
crates/surge-daemon/tests/: daemon_admission_queue.rs  daemon_e2e_smoke.rs  daemon_graceful_shutdown.rs  daemon_list_queued.rs  daemon_merge_gate_e2e.rs  daemon_parity_test.rs  daemon_queue_drain.rs  daemon_queue_full.rs  daemon_queued_subscribe_test.rs  daemon_recovery.rs  daemon_run_completion_comment.rs  daemon_stop_queued.rs  daemon_subscribe_global.rs  daemon_subscribe_unknown.rs  inbox_callback_e2e.rs  mcp_probe_ipc.rs  triage_wiring.rs
crates/surge-git/: Cargo.toml
crates/surge-git/src/: audit.rs  cleanup.rs  lib.rs  orphan.rs  run_worktree.rs  worktree.rs
crates/surge-git/tests/: platform_worktree_test.rs
crates/surge-intake/: Cargo.toml
crates/surge-intake/src/: cadence.rs  candidates.rs  dedup.rs  error.rs  lib.rs  policy.rs  router.rs  source.rs  testing.rs  types.rs
crates/surge-intake/tests/: e2e_mock.rs  github_real.rs  linear_polling.rs  linear_real.rs  two_sources.rs
crates/surge-mcp/: Cargo.toml  README.md
crates/surge-mcp/src/: connection.rs  error.rs  lib.rs  redact.rs  registry.rs
crates/surge-mcp/tests/: filesystem_mcp_e2e.rs  mcp_stdio_e2e.rs
crates/surge-notify/: Cargo.toml  README.md
crates/surge-notify/src/: deliverer.rs  desktop.rs  email.rs  lib.rs  messages.rs  multiplexer.rs  render.rs  slack.rs  telegram.rs  webhook.rs
crates/surge-orchestrator/: Cargo.toml
crates/surge-orchestrator/benches/: stage_transition.rs
crates/surge-orchestrator/examples/: engine_in_daemon.rs
crates/surge-orchestrator/src/: archetype_registry.rs  bootstrap_driver.rs  budget.rs  circuit_breaker.rs  conflict.rs  context.rs  executor.rs  feature_driver.rs  flow_amendment.rs  gates.rs  lib.rs  parallel.rs  phases.rs  pipeline.rs  planner.rs  project.rs  project_context.rs  prompt.rs  qa.rs  retry.rs  roadmap_amendment.rs  roadmap_document.rs  roadmap_target.rs  schedule.rs  triage.rs
crates/surge-orchestrator/tests/: README.md  archetypes_mock_test.rs  artifact_contract_golden_test.rs  bootstrap_archetypes_test.rs  bootstrap_driver_e2e.rs  bootstrap_edit_cap_test.rs  bootstrap_linear_3_test.rs  bootstrap_multi_milestone_test.rs  bootstrap_validation_retry_test.rs  bundled_bootstrap_flow.rs  circuit_breaker_e2e.rs  e2e_pipeline.rs  elevation_audit.rs  elevation_blocked.rs  elevation_e2e.rs  engine_agent_artifact_emission_test.rs  engine_agent_stage_unit.rs  engine_bootstrap_parent_artifacts_test.rs  engine_budget_test.rs  engine_concurrent_runs.rs  engine_concurrent_unit.rs  engine_e2e_linear_pipeline.rs  engine_human_input_resolved.rs  engine_human_input_timeout.rs  engine_human_input_unit.rs  engine_initial_prompt_test.rs  engine_m6_iterable_loop.rs  engine_m6_loop_max_traversals.rs  engine_m6_loop_retry.rs  engine_m6_loop_skip_failure.rs  engine_m6_multi_edge_rejected.rs  engine_m6_notify_webhook.rs  engine_m6_resume_with_loop_frame.rs  (+37 more)
crates/surge-persistence/: Cargo.toml
crates/surge-spec/: Cargo.toml
crates/surge-telegram/: Cargo.toml
crates/surge-ui/: Cargo.toml
(+507 files in other folders)
