[workspace]
resolver = "2"
members = [
    "crates/surge-core",
    "crates/surge-acp",
    "crates/surge-spec",
    "crates/surge-git",
    "crates/surge-orchestrator",
    "crates/surge-cli",
    "crates/surge-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vanyastaff/surge"
rust-version = "1.85"

[workspace.dependencies]
# ACP
agent-client-protocol = { version = "0.10.2", features = ["unstable_session_usage"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graph
petgraph = "0.7"

# Git
git2 = "0.20"

# HTTP client (remote registry fetching)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Secret scanning
regex = "1"

# Internal crates
surge-core = { path = "crates/surge-core" }
surge-acp = { path = "crates/surge-acp" }
surge-spec = { path = "crates/surge-spec" }
surge-git = { path = "crates/surge-git" }
surge-orchestrator = { path = "crates/surge-orchestrator" }
