[workspace]
resolver = "2"
members = [
    "crates/surge-core",
    "crates/surge-acp",
    "crates/surge-spec",
    "crates/surge-git",
    "crates/surge-persistence",
    "crates/surge-orchestrator",
    "crates/surge-cli",
    "crates/surge-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vanyastaff/surge"
rust-version = "1.85"

[workspace.dependencies]
# ACP
agent-client-protocol = { version = "0.10.2", features = ["unstable_session_usage"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Edit-aware TOML writes
toml_edit = "0.22"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Binary serialization
bincode = "1.3"

# Versioning
semver = { version = "1", features = ["serde"] }

# Testing / dev
proptest = "1"
insta = { version = "1", features = ["yaml", "redactions", "json"] }
criterion = "0.5"

# Graph
petgraph = "0.7"

# Git
git2 = "0.20"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

# File paths
dirs = "5"

# HTTP client (remote registry fetching)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Secret scanning
regex = "1"

# Random number generation
rand = "0.9"

# M2 storage layer
r2d2 = "0.8"
r2d2_sqlite = "0.25"  # must match rusqlite 0.32 — bump together
fd-lock = "4"
async-stream = "0.3"
tokio-stream = "0.1"
tempfile = "3"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Internal crates
surge-core = { path = "crates/surge-core" }
surge-acp = { path = "crates/surge-acp" }
surge-spec = { path = "crates/surge-spec" }
surge-git = { path = "crates/surge-git" }
surge-persistence = { path = "crates/surge-persistence" }
surge-orchestrator = { path = "crates/surge-orchestrator" }
