[package]
name = "surge-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## Exposes `AcpBridge::__test_panic_now` and `BridgeCommand::TestPanic` for
## integration tests that compile as a separate crate (and therefore don't
## trigger `cfg(test)` of this crate).  Never enable in production.
test-helpers = []

[dependencies]
surge-core = { workspace = true }
agent-client-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

# Process tracking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }

[[bin]]
name = "mock_acp_agent"
path = "src/bin/mock_acp_agent.rs"
required-features = []

[[test]]
name = "bridge_worker_panic"
path = "tests/bridge_worker_panic.rs"
required-features = ["test-helpers"]
