[package]
name = "surge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "surge"
path = "src/main.rs"

[dependencies]
surge-core = { workspace = true }
surge-acp = { workspace = true }
surge-spec = { workspace = true }
surge-git = { workspace = true }
surge-orchestrator = { workspace = true }
surge-persistence = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
agent-client-protocol = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
