[package]
name = "surge-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "surge-daemon"
path = "src/main.rs"

[dependencies]
clap.workspace = true
humantime = "2"
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true

interprocess.workspace = true
sysinfo.workspace = true
dirs.workspace = true
rusqlite.workspace = true

surge-core.workspace = true
surge-orchestrator.workspace = true
surge-acp.workspace = true
surge-persistence.workspace = true
surge-notify.workspace = true
notify-rust = { workspace = true }
surge-intake.workspace = true
surge-telegram = { path = "../surge-telegram" }
teloxide.workspace = true
reqwest.workspace = true
ulid.workspace = true
futures = "0.3"
tokio-stream = { workspace = true }

# Unix signal handling
[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
chrono.workspace = true
surge-orchestrator.workspace = true
surge-acp.workspace = true
surge-persistence.workspace = true
toml.workspace = true
