[package]
name = "surge-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

rmcp.workspace = true

surge-core.workspace = true

[features]
mock-server = []

[[example]]
name = "mock_mcp_server"
path = "tests/fixtures/mock_mcp_server.rs"
required-features = ["mock-server"]

[dev-dependencies]
tempfile.workspace = true
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
