[package]
name = "surge-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surge-core = { workspace = true }
surge-acp = { workspace = true }
surge-spec = { workspace = true }
surge-git = { workspace = true }
surge-persistence = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
agent-client-protocol = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
base64 = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
