[package]
name = "surge-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surge-core = { workspace = true }
surge-acp = { workspace = true }
surge-spec = { workspace = true }
surge-git = { workspace = true }
surge-notify = { workspace = true }
surge-persistence = { workspace = true }
surge-mcp = { workspace = true }
surge-intake = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
agent-client-protocol = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
base64 = "0.22"
interprocess.workspace = true
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tiny_http = { workspace = true }
surge-notify = { workspace = true }

[[example]]
name = "engine_in_daemon"
