[package]
name = "surge-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surge-core = { path = "../surge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
