[package]
name = "surge-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "surge-gui"
path = "src/main.rs"

[dependencies]
surge-core = { workspace = true }
surge-acp = { workspace = true }
eframe = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
