[package]
name = "surge-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GUI for Surge — GPUI-based desktop application"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

surge-core = { path = "../surge-core" }
surge-acp = { path = "../surge-acp" }

dirs = "6"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
