[package]
name = "surge-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GUI for Surge — GPUI-based desktop application"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

surge-core = { path = "../surge-core" }
surge-acp = { path = "../surge-acp" }
surge-orchestrator = { path = "../surge-orchestrator" }
surge-daemon = { path = "../surge-daemon" }
agent-client-protocol.workspace = true

tokio.workspace = true
dirs = "6"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pulldown-cmark = "0.12"
chrono = { workspace = true }
notify-rust = { workspace = true }
